# manipulation_project

moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  pick_and_place_real.launch.py
moveit2_scripts/src/: pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp  pick_and_place_real.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: name.srdf
object_detection/: CMakeLists.txt  package.xml
object_detection/launch/: object_detection.launch.py
object_detection/rviz/: object_detection.rviz
object_detection/scripts/: object_detection.py  static_transform_publisher.py
object_detection/src/: object_detection.cpp  static_transform_publisher.cpp
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: name.srdf
real_moveit_config/launch/: move_group.launch.py
